turn_lexer_derive/test/test03-reject_union.stderr
error: #[derive(Lexer)] is only valid for enums.
 --> $DIR/test03-reject_union.rs:5:7
  |
5 | union Foo {
  |       ^^^
